# Opengl-Project-Template

./: CMakeLists.txt  Readme.md
.cache/clangd/index/: Shader.h.B2E36ABF7D3DFA41.idx  context.c.03B7D6ABB5A4F970.idx  egl_context.c.669C0FF3816E7471.idx  glad.c.3A96CF1C1DFA8C1E.idx  glad.h.86007718DEF243EA.idx  glfw3.h.1438DD23FC2D0FFD.idx  glfw3native.h.6520A46486434E7F.idx  glx_context.c.3B6B25B608A3F4EA.idx  init.c.DFA2A9BEF282D339.idx  input.c.88849A5647D53472.idx  internal.h.219EB9D04B433B30.idx  linux_joystick.c.2FC2DCA5DF64E3C2.idx  linux_joystick.h.0171FE224227E95E.idx  main.cpp.DFAFBD423CDACAAF.idx  mappings.h.C0BC52B6BBB6D2FD.idx  monitor.c.4D29C418A38F0D46.idx  null_init.c.40B6593F6D6EC44E.idx  null_joystick.c.81965C2D52009FD4.idx  null_joystick.h.DF2A3E6E1C520085.idx  null_monitor.c.C1D9A4323716E805.idx  null_platform.h.85FFE271D104B184.idx  null_window.c.8DF8D4892C4D173A.idx  osmesa_context.c.3768A57820A2DE60.idx  platform.c.792D13644740FE1A.idx  platform.h.1EFCD1D2C9539D31.idx  (+21 more)
01-Hellowindow/app/: main.cpp
01-Hellowindow/customClass/: Shader.h
02-Triangle/app/: main.cpp
03-Shaders/app/: main.cpp
03-Shaders/customClass/: CMakeLists.txt
03and04-ShadersAndTextures/: Readme.md
03and04-ShadersAndTextures/app/: CMakeLists.txt  main.cpp
03and04-ShadersAndTextures/src/: CMakeLists.txt
05-Transformation/: Makefile  Readme.md
05-Transformation/app/: main.cpp
05-Transformation/customClass/: Camera.h  Shader.h
05-Transformation/src/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
customClass/: Shader.h
src/glew/: CMakeLists.txt
(+193 files in other folders)
